# cv-playground

./: .gitignore  01_prepare_dataset_v0.2.py  CONTRIBUTING.md  Contributors.md  README.md  REPO_structure.md  SECURITY_AUDIT.md  SECURITY_SUMMARY.txt  databricks.yml  imgnet_mbnetv2_TorchDistr_Optuna_mlflow_v0.2.3.1 (UCVols_chkpt).ipynb  requirements.txt
notebooks/: 01_MultiNode A10 training on SGC using Ultralytics YOLO CV model with coco128 image dataset.ipynb  02_CellTypes_InstanceSeg_TransferLearn_sgcA10_MultipleGPU_MlflowLoggingModel.py  03_CellTypes_InstanceSeg_TransferLearn_sgcH100_MultipleGPU_MlflowLoggingModel.py
notebooks/DistributedDL/(drafts) code2share/: 01_prepare_dataset_v0.1.py  imgnet_mbnetv2_TorchDistr_OptunaTPE_mlflow_v0.1 (dataAug).ipynb  imgnet_mbnetv2_TorchDistr_Optuna_mlflow_v0.1 (dataAug).ipynb  (+1 more)
notebooks/NuInsSeg/: README.md
notebooks/NuInsSeg/_dev/: README.md
projects/DistributedDL/: README.md  test_resource_detect_v0.1.ipynb
projects/NuInsSeg/: README.md
projects/deep_learning_devex/: .coverage  .gitignore  README.md  databricks.yml  dev.env.example  dev.sh  download_logs.sh  pyproject.toml  requirements.txt
projects/deep_learning_devex/resources/: jobs.yml
projects/deep_learning_devex/src/dl_dep_mgr/: __init__.py  config.py  data.py  deploy_serving.py  distributor.py  model.py  test_inference.py  train.py
projects/deep_learning_devex/tests/: __init__.py  test_config.py  test_data.py  test_model.py
projects/diffusion_inpainting/: README.md  convert_otr_to_mds_classic.ipynb  convert_otr_to_mds_v0.1.py  download_otr_v0.1.py  finetune_sd2_inpainting_v0.1.5.py  finetune_sd2_inpainting_v0.1.5_classic.py
projects/ultralytics_databricks_examples/: 01_Computer Vision_ YOLO Training Best Practice on Databricks - SingleNode-MultiGPU version.py  02_Computer Vision_ YOLO Training Best Practice on Databricks - MultiNode-MultiGPU version.py  air-yolo11n-detect-coco128-multiA10.ipynb  air-yolo11n-detect-coco128-singleA10.ipynb  classic-yolo11n-detect-coco128-SingleNodeMultipleGPUs.ipynb  classic-yolo11n-detect-coco128-singleA10.ipynb  sgc-yolo11n-detect-coco128-multiA10.ipynb  sgc-yolo11n-detect-coco128-singleA10.ipynb
(+30 files in other folders)
